scaling issue with fa-th and fa-bars icons when using boostrap-red.css:37 #navbar-collapse-1 i { font-size 1.0rem; }; FF 52.0.1 on Win7; 0.9rem and 1.1rem both render much better. 1.1 is a bit large so going with 0.9

--- a/view/css/bootstrap-red.css
+++ b/view/css/bootstrap-red.css
@@ -35,7 +35,7 @@ nav .badge {
 
 
 #navbar-collapse-1 i {
-	font-size: 1rem;
+	font-size: 0.9rem;
 }
 
 nav .dropdown-menu {
